--- a/src/ProgressBar/progressBar.css
+++ b/src/ProgressBar/progressBar.css
@@ -1,5 +1,6 @@
 * {
-    background-color: aqua;
+    background-color: #177e89;
+    color:#323031
 }
 
 .progress-bar-container {
@@ -25,7 +26,7 @@
 
 
 .step-number {
-    background-color: black;
+    background-color: #323031;
     border-radius: 50%;
     width: 35px;
     height: 35px;
@@ -36,7 +37,7 @@
 }
 
 .step-completed {
-    background-color: red;
+    background-color: #db3a34;
 }
 
 .step-description {
@@ -46,7 +47,7 @@
 }
 
 .step-description-completed {
-    color:red;
+    color:#db3a34;
 }
 
 .progress-bar-container::before {
@@ -54,7 +55,7 @@
     position: absolute;
     width: 100%;
     height: 10px;
-    background-color:aqua;
+    background-color:#177e89;
     top: 50%;
     left: 0;
     transform: translateY(-50%) ;
@@ -67,7 +68,7 @@
     position: absolute;
     width: 50%;
     height: 10px;
-    background-color:red;
+    background-color:#db3a34;
     top: 50%;
     left: 0;
     transform: translateY(-50%) ;
