--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ button {
   border-radius: 10px;
   padding:10px;
   font-size:16px;
-  border: 2px solid #f2f2f2;
+  border: 2px solid #959595;
   margin-top: 32px;
 }
 
