--- a/src/ProgressBar/progressBar.css
+++ b/src/ProgressBar/progressBar.css
@@ -1,22 +1,25 @@
 * {
-    background-color: #177e89;
-    color:#323031
+    background-color: #f5f5f5;
+    color: #000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .progress-bar-container {
-    background-color: #f2f2f2;
+    background-color: #fff;
     width: 100vw;
     height: 100px;
     position: relative;
     display: flex;
     align-items:center ;
     justify-content:space-evenly;
+    border-bottom: 1px solid rgba(0,0,0,0,3);
+    box-shadow: 0 0 8px rgba(0,0,0,0.4);
 }
 
 .step {
     width: 45px;
     height: 45px;
-    background-color: #f2f2f2;
+    background-color: #fff;
     z-index: 10;
     border-radius: 50%;
     display: flex;
@@ -26,7 +29,7 @@
 
 
 .step-number {
-    background-color: #323031;
+    background-color: #959595;
     border-radius: 50%;
     width: 35px;
     height: 35px;
@@ -37,17 +40,17 @@
 }
 
 .step-completed {
-    background-color: #db3a34;
+    background-color: #438988;
 }
 
 .step-description {
-    background-color: #f2f2f2;
+    background-color: #fff;
     position: absolute;
     top:75%;
 }
 
 .step-description-completed {
-    color:#db3a34;
+    color:#438988;
 }
 
 .progress-bar-container::before {
@@ -55,7 +58,7 @@
     position: absolute;
     width: 100%;
     height: 10px;
-    background-color:#177e89;
+    background-color:#959595;
     top: 50%;
     left: 0;
     transform: translateY(-50%) ;
@@ -68,7 +71,7 @@
     position: absolute;
     width: 50%;
     height: 10px;
-    background-color:#db3a34;
+    background-color:#438988;
     top: 50%;
     left: 0;
     transform: translateY(-50%) ;
